{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 121,
  "lineage": "e274efbd-62bc-728f-6671-ad3f24b859c7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "aks_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/natGateways/aks-nat-gateway",
            "idle_timeout_in_minutes": 10,
            "location": "westus2",
            "name": "aks-nat-gateway",
            "resource_group_name": "aks-resources",
            "resource_guid": "7b1eea78-51db-4ed1-a659-8af263c3d40a",
            "sku_name": "Standard"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "aks-nat-gateway",
            "resource_group_name": "aks-resources",
            "subscription_id": "17c4e02b-4d12-4506-b997-5bdd24cebb5f"
          },
          "dependencies": [
            "azurerm_resource_group.aks_resource"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "aks_nat_ip_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/natGateways/aks-nat-gateway|/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/publicIPAddresses/nat-gateway-ip",
            "nat_gateway_id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/natGateways/aks-nat-gateway",
            "public_ip_address_id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/publicIPAddresses/nat-gateway-ip"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.aks_nat_gateway",
            "azurerm_public_ip.aks_public_ip",
            "azurerm_resource_group.aks_resource"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/networkSecurityGroups/aks-security-group",
            "location": "westus2",
            "name": "aks-security-group",
            "resource_group_name": "aks-resources",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "aks-security-group",
            "resource_group_name": "aks-resources",
            "subscription_id": "17c4e02b-4d12-4506-b997-5bdd24cebb5f"
          },
          "dependencies": [
            "azurerm_resource_group.aks_resource"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "aks_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/publicIPAddresses/nat-gateway-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.154.242.42",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "nat-gateway-ip",
            "resource_group_name": "aks-resources",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Production"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.aks_resource"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/routeTables/aks-private-route-table/routes/nat-gateway-route",
            "name": "nat-gateway-route",
            "next_hop_in_ip_address": "4.154.242.42",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "aks-resources",
            "route_table_name": "aks-private-route-table",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nat-gateway-route",
            "resource_group_name": "aks-resources",
            "route_table_name": "aks-private-route-table",
            "subscription_id": "17c4e02b-4d12-4506-b997-5bdd24cebb5f"
          },
          "dependencies": [
            "azurerm_public_ip.aks_public_ip",
            "azurerm_resource_group.aks_resource",
            "azurerm_route_table.aks_private_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "aks_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/routeTables/aks-private-route-table",
            "location": "westus2",
            "name": "aks-private-route-table",
            "resource_group_name": "aks-resources",
            "route": [],
            "subnets": [],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "aks-private-route-table",
            "resource_group_name": "aks-resources",
            "subscription_id": "17c4e02b-4d12-4506-b997-5bdd24cebb5f"
          },
          "dependencies": [
            "azurerm_resource_group.aks_resource"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "aks_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/routeTables/aks-public-route-table",
            "location": "westus2",
            "name": "aks-public-route-table",
            "resource_group_name": "aks-resources",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "internet-route",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "aks-public-route-table",
            "resource_group_name": "aks-resources",
            "subscription_id": "17c4e02b-4d12-4506-b997-5bdd24cebb5f"
          },
          "dependencies": [
            "azurerm_resource_group.aks_resource"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/virtualNetworks/aks-virtual-network/subnets/aks-private-subnet",
            "name": "aks-private-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "aks-resources",
            "virtual_network_name": "aks-virtual-network"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "aks-private-subnet",
            "resource_group_name": "aks-resources",
            "subscription_id": "17c4e02b-4d12-4506-b997-5bdd24cebb5f",
            "virtual_network_name": "aks-virtual-network"
          },
          "dependencies": [
            "azurerm_resource_group.aks_resource",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/virtualNetworks/aks-virtual-network/subnets/aks-public-subnet",
            "name": "aks-public-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "aks-resources",
            "virtual_network_name": "aks-virtual-network"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "aks-public-subnet",
            "resource_group_name": "aks-resources",
            "subscription_id": "17c4e02b-4d12-4506-b997-5bdd24cebb5f",
            "virtual_network_name": "aks-virtual-network"
          },
          "dependencies": [
            "azurerm_resource_group.aks_resource",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "aks_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/virtualNetworks/aks-virtual-network/subnets/aks-private-subnet",
            "route_table_id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/routeTables/aks-private-route-table",
            "subnet_id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/virtualNetworks/aks-virtual-network/subnets/aks-private-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.aks_resource",
            "azurerm_route_table.aks_private_rt",
            "azurerm_subnet.aks_private_subnet",
            "azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "77945a7d-6d42-4053-b716-ea5ea72edd72",
            "id": "/subscriptions/17c4e02b-4d12-4506-b997-5bdd24cebb5f/resourceGroups/aks-resources/providers/Microsoft.Network/virtualNetworks/aks-virtual-network",
            "location": "westus2",
            "name": "aks-virtual-network",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "aks-resources",
            "tags": {
              "environment": "Production"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "aks-virtual-network",
            "resource_group_name": "aks-resources",
            "subscription_id": "17c4e02b-4d12-4506-b997-5bdd24cebb5f"
          },
          "dependencies": [
            "azurerm_resource_group.aks_resource"
          ]
        }
      ]
    }
  ]
}